
workspace = { members = ["hello_macro_derive"] }
[package]
name = "hello_macro"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_macro_derive = { path = "./hello_macro_derive" }
futures = "0.3"


[dependencies.async-std]
version = "1.6"
features = ["attributes"]